--- a/public/css/style.css
+++ b/public/css/style.css
@@ -143,6 +143,7 @@ header {
 .bg-gradient {
     bbackground: rgb(218,218,218);
 background: linear-gradient(90deg, rgba(218,218,218,1) 0%, rgba(255,255,255,1) 53%, rgba(218,218,218,1) 100%);
+}
 
 .tagline {
     font-size: 23px;
